[project]
name = "question-bank-mcp"
version = "0.1.0"
description = "MCP server for managing K-12 assessment question banks with IRT metadata"
requires-python = ">=3.12"
license = "MIT"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
